Ensure rounded corners are not cut off in swirl-app-layout (#1436)

--- a/packages/swirl-components/src/components/swirl-app-layout/swirl-app-layout-base.css
+++ b/packages/swirl-components/src/components/swirl-app-layout/swirl-app-layout-base.css
@@ -715,6 +715,7 @@
     & .app-layout__body,
     & .app-layout__sidebar {
       border-radius: var(--s-border-radius-l);
+      overflow: hidden;
     }
 
     & .app-layout__sidebar {
